--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
   "devDependencies": {
     "@angular-devkit/build-angular": ">=0.13.0",
     "@angular/compiler-cli": ">=6.0.0",
-    "karma": ">=4.0.0"
+    "karma": "^3.1.1"
   }
 }
