--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "firebase4ts",
+  "name": "firebasets",
   "version": "0.0.2",
   "description": "Firebase in TypeScript",
   "main": "index.js",
